--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "country-calling-code": "^0.0.3",
+    "date-fns": "^2.30.0",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "framer-motion": "^10.16.1",
@@ -40,6 +41,7 @@
     "next-auth": "^4.23.1",
     "postcss": "8.4.28",
     "react": "18.2.0",
+    "react-day-picker": "^8.8.1",
     "react-dom": "18.2.0",
     "react-google-autocomplete": "^2.7.3",
     "react-google-places-autocomplete": "^4.0.1",
