--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-dom": "18.2.0",
     "react-google-autocomplete": "^2.7.3",
     "react-google-places-autocomplete": "^4.0.1",
+    "swr": "^2.2.2",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.6",
