--- a/package.json
+++ b/package.json
@@ -51,6 +51,10 @@
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.6",
     "typescript": "5.2.2",
+    "xml2js": "^0.6.2",
     "zustand": "^4.4.1"
+  },
+  "devDependencies": {
+    "@types/xml2js": "^0.4.12"
   }
 }
