--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "jwt-decode": "^3.1.2",
     "libphonenumber-js": "^1.10.42",
     "lucide-react": "^0.269.0",
-    "next": "13.4.19",
+    "next": "latest",
     "next-auth": "^4.23.1",
     "postcss": "8.4.28",
     "react": "18.2.0",
