--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
+    "@radix-ui/react-hover-card": "^1.0.7",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-menubar": "^1.0.3",
     "@radix-ui/react-navigation-menu": "^1.1.3",
@@ -32,18 +33,18 @@
     "country-calling-code": "^0.0.3",
     "date-fns": "^2.30.0",
     "eslint": "8.48.0",
-    "eslint-config-next": "13.4.19",
+    "eslint-config-next": "^13.5.4",
     "framer-motion": "^10.16.1",
     "google-map-react": "^2.2.1",
     "jwt-decode": "^3.1.2",
     "libphonenumber-js": "^1.10.42",
     "lucide-react": "^0.269.0",
-    "next": "latest",
+    "next": "^13.5.4",
     "next-auth": "^4.23.1",
     "postcss": "8.4.28",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-day-picker": "^8.8.1",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-google-autocomplete": "^2.7.3",
     "react-google-places-autocomplete": "^4.0.1",
     "swr": "^2.2.2",
