--- a/package.json
+++ b/package.json
@@ -1,62 +1,71 @@
 {
-  "name": "frontend",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@mapbox/search-js-react": "^1.0.0-beta.17",
-    "@radix-ui/react-avatar": "^1.0.3",
-    "@radix-ui/react-checkbox": "^1.0.4",
-    "@radix-ui/react-dialog": "^1.0.4",
-    "@radix-ui/react-dropdown-menu": "^2.0.5",
-    "@radix-ui/react-hover-card": "^1.0.7",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-menubar": "^1.0.3",
-    "@radix-ui/react-navigation-menu": "^1.1.3",
-    "@radix-ui/react-scroll-area": "^1.0.4",
-    "@radix-ui/react-select": "^1.2.2",
-    "@radix-ui/react-separator": "^1.0.3",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@types/google-map-react": "^2.1.7",
-    "@types/node": "20.5.6",
-    "@types/react": "18.2.21",
-    "@types/react-dom": "18.2.7",
-    "autoprefixer": "10.4.15",
-    "axios": "^1.5.0",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
-    "country-calling-code": "^0.0.3",
-    "date-fns": "^2.30.0",
-    "eslint": "8.48.0",
-    "eslint-config-next": "^13.5.4",
-    "framer-motion": "^10.16.1",
-    "google-map-react": "^2.2.1",
-    "jwt-decode": "^3.1.2",
-    "libphonenumber-js": "^1.10.42",
-    "lucide-react": "^0.269.0",
-    "next": "^13.5.4",
-    "next-auth": "^4.23.1",
-    "postcss": "8.4.28",
-    "react": "^18.2.0",
-    "react-day-picker": "^8.8.1",
-    "react-dom": "^18.2.0",
-    "react-google-autocomplete": "^2.7.3",
-    "react-google-places-autocomplete": "^4.0.1",
-    "swr": "^2.2.2",
-    "tailwind-merge": "^1.14.0",
-    "tailwindcss": "3.3.3",
-    "tailwindcss-animate": "^1.0.6",
-    "typescript": "5.2.2",
-    "xml2js": "^0.6.2",
-    "zod": "^3.22.4",
-    "zustand": "^4.4.1"
-  },
-  "devDependencies": {
-    "@types/xml2js": "^0.4.12"
-  }
+    "name": "frontend",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint",
+        "prepare": "husky install",
+        "format:write": "prettier --write ./src/**/*.{ts,tsx,css}",
+        "format:check": "prettier --check ./src/**/*.{ts,tsx,css}"
+    },
+    "lint-staged": {
+        "**/*": "prettier --write ./src/**/*.{ts,tsx,css} --ignore-unknown"
+    },
+    "dependencies": {
+        "@mapbox/search-js-react": "^1.0.0-beta.17",
+        "@radix-ui/react-avatar": "^1.0.3",
+        "@radix-ui/react-checkbox": "^1.0.4",
+        "@radix-ui/react-dialog": "^1.0.4",
+        "@radix-ui/react-dropdown-menu": "^2.0.5",
+        "@radix-ui/react-hover-card": "^1.0.7",
+        "@radix-ui/react-label": "^2.0.2",
+        "@radix-ui/react-menubar": "^1.0.3",
+        "@radix-ui/react-navigation-menu": "^1.1.3",
+        "@radix-ui/react-scroll-area": "^1.0.4",
+        "@radix-ui/react-select": "^1.2.2",
+        "@radix-ui/react-separator": "^1.0.3",
+        "@radix-ui/react-slot": "^1.0.2",
+        "@types/google-map-react": "^2.1.7",
+        "@types/node": "20.5.6",
+        "@types/react": "18.2.21",
+        "@types/react-dom": "18.2.7",
+        "autoprefixer": "10.4.15",
+        "axios": "^1.5.0",
+        "class-variance-authority": "^0.7.0",
+        "clsx": "^2.0.0",
+        "country-calling-code": "^0.0.3",
+        "date-fns": "^2.30.0",
+        "eslint": "8.48.0",
+        "eslint-config-next": "^13.5.4",
+        "framer-motion": "^10.16.1",
+        "google-map-react": "^2.2.1",
+        "jwt-decode": "^3.1.2",
+        "libphonenumber-js": "^1.10.42",
+        "lucide-react": "^0.269.0",
+        "next": "^13.5.4",
+        "next-auth": "^4.23.1",
+        "postcss": "8.4.28",
+        "react": "^18.2.0",
+        "react-day-picker": "^8.8.1",
+        "react-dom": "^18.2.0",
+        "react-google-autocomplete": "^2.7.3",
+        "react-google-places-autocomplete": "^4.0.1",
+        "swr": "^2.2.2",
+        "tailwind-merge": "^1.14.0",
+        "tailwindcss": "3.3.3",
+        "tailwindcss-animate": "^1.0.6",
+        "typescript": "5.2.2",
+        "xml2js": "^0.6.2",
+        "zod": "^3.22.4",
+        "zustand": "^4.4.1"
+    },
+    "devDependencies": {
+        "@types/xml2js": "^0.4.12",
+        "husky": "^8.0.3",
+        "lint-staged": "^14.0.1",
+        "prettier": "3.0.3"
+    }
 }
