--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
         "tailwindcss-animate": "^1.0.6",
         "typescript": "5.2.2",
         "xml2js": "^0.6.2",
+        "xml2json": "^0.12.0",
         "zod": "^3.22.4",
         "zustand": "^4.4.1"
     },
