--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
         "lucide-react": "^0.269.0",
         "next": "^13.5.4",
         "next-auth": "^4.23.1",
+        "next-themes": "^0.2.1",
         "postcss": "8.4.28",
         "react": "^18.2.0",
         "react-day-picker": "^8.8.1",
